--- a/src/assets/styles/partials/components/_header.scss
+++ b/src/assets/styles/partials/components/_header.scss
@@ -63,3 +63,59 @@
         margin-right: 10px;
     }
 }
+
+.headerm
+{
+    display: none;
+}
+
+@media (max-width: 991px)
+{
+    .header
+    {
+        display: none;
+    }
+
+    .headerm
+    {
+        background-color: #1D88E5;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 10px;
+        position: relative;
+
+        &_user
+        {
+            text-align: center;
+            color: black;
+        }
+
+        img
+        {
+            width: 40px;
+        }
+
+        &_right
+        {
+            i
+            {
+                font-size: 28px;
+                color: white;
+            }
+        }
+
+        input
+        {
+            position: absolute;
+            left: 60px;
+            height: 40px;
+            width: 250px;
+            border: none;
+            padding: 0 15px;
+            background-color: $bg-dark;
+            outline: none;
+            color: #818d9a;
+        }
+    }
+}
