--- a/src/assets/styles/partials/pages/_project.scss
+++ b/src/assets/styles/partials/pages/_project.scss
@@ -167,3 +167,18 @@
         font-size: 10px;
     }
 }
+
+@media (max-width: 575px)
+{
+    .project
+    {
+        padding: 10px;
+
+        &_body
+        {
+            width: 100%;
+            min-width: auto;
+            margin-right: 0;
+        }
+    }
+}
