--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -8,6 +8,7 @@
 @import './partials/components/header';
 @import './partials/components/access';
 @import './partials/components/permission';
+@import './partials/components/userDetail';
 
 // PAGES
 @import './partials/pages/login';
