--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -2,13 +2,13 @@
 @import './partials/base/typography';
 @import './partials/base/general';
 
-
 // COMPONENTS
 @import './partials/components/sideBar';
 @import './partials/components/header';
 @import './partials/components/access';
 @import './partials/components/permission';
 @import './partials/components/userDetail';
+@import './partials/components/projectDetail';
 
 // PAGES
 @import './partials/pages/login';
