--- a/src/assets/styles/partials/pages/_project.scss
+++ b/src/assets/styles/partials/pages/_project.scss
@@ -152,6 +152,9 @@
         img
         {
             width: 30px;
+            cursor: pointer;
+            // position: relative;
+            // z-index: 2;
         }
     }
 
