--- a/src/assets/styles/partials/components/_userDetail.scss
+++ b/src/assets/styles/partials/components/_userDetail.scss
@@ -130,6 +130,35 @@
         font-size: 12px;
         color: $bg-light;
     }
+    
+    &_bot
+    {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 30px;
+
+        .user_heading
+        {
+            margin: 0;
+        }
+
+        button
+        {
+            background-color: $bg-light;
+            border: none;
+            font-size: 10px;
+            padding: 5px 25px;
+            color: #999999;
+            margin: 0 5px;
+        }
+
+        button:hover
+        {
+            background-color: $yellow;
+            color: $bg-dark;
+        }
+    }
 }
 
 @media (max-width: 991px)
