forget page and search project

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -10,6 +10,7 @@
 @import './partials/components/userDetail';
 @import './partials/components/projectDetail';
 @import './partials/components/addOrganizer';
+@import './partials/components/loader';
 
 // PAGES
 @import './partials/pages/login';
@@ -17,3 +18,4 @@
 @import './partials/pages/project';
 @import './partials/pages/addProject';
 @import './partials/pages/organizer';
+@import './partials/pages/reset';
