--- a/src/assets/styles/partials/pages/_project.scss
+++ b/src/assets/styles/partials/pages/_project.scss
@@ -2,7 +2,6 @@
 {
     padding: 15px;
     display: flex;
-    // justify-content: space-between;
     flex-wrap: wrap;
 
     &_body
@@ -10,7 +9,7 @@
         width: 32%;
         min-width: 370px;
         margin-right: 10px;
-        margin-top: 30px;
+        margin-bottom: 30px;
     }
 
     &_head
