upload/delete images and docs

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -11,6 +11,7 @@
 @import './partials/components/projectDetail';
 @import './partials/components/addOrganizer';
 @import './partials/components/loader';
+@import './partials/components/infoModal';
 
 // PAGES
 @import './partials/pages/login';
