--- a/src/assets/styles/partials/components/_addOrganizer.scss
+++ b/src/assets/styles/partials/components/_addOrganizer.scss
@@ -90,6 +90,25 @@
             color: $bg-dark;
         }
     }
+
+    &_labelImg {
+        width: 120px;
+        height: 120px;
+        overflow: hidden;
+        cursor: pointer;
+        margin-top: 30px;
+        margin-left: 140px;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+
+    input[type="file"] {
+        display: none;
+    }
 }
 
 @media (max-width: 991px) {
