--- a/src/assets/styles/partials/components/_access.scss
+++ b/src/assets/styles/partials/components/_access.scss
@@ -70,6 +70,8 @@
         img
         {
             width: 30px;
+            height: 30px;
+            border-radius: 100px;
             cursor: pointer;
         }
     }
