--- a/src/assets/styles/partials/pages/_organizer.scss
+++ b/src/assets/styles/partials/pages/_organizer.scss
@@ -1,13 +1,16 @@
-.org {
+.org
+{
     background-color: $bg-medium;
     min-height: 100vh;
     display: flex;
 
-    &_body {
+    &_body
+    {
         width: 100%;
     }
 
-    &_tabs {
+    &_tabs
+    {
         background: $bg-dark;
         margin: 20px 20px -10px;
         padding: 15px 50px;
@@ -16,45 +19,53 @@
         justify-content: center;
     }
 
-    &_tabName {
+    &_tabName
+    {
         cursor: pointer;
         margin: 0 10px;
     }
 
     &_tabName.active,
-    &_tabName:hover {
+    &_tabName:hover
+    {
         color: $yellow;
     }
 
-    &_head {
+    &_head
+    {
         padding: 0 0 10px 30px;
         border-bottom: 1px solid $bg-medium;
 
-        p {
+        p
+        {
             font-size: 18px;
             color: $bg-light;
         }
 
-        span {
+        span
+        {
             font-size: 24px;
             color: white;
             margin-right: 8px;
         }
     }
 
-    &_search {
+    &_search
+    {
         border-bottom: 1px solid $bg-medium;
         padding: 2px 0;
         display: flex;
         align-items: center;
         margin-bottom: 15px;
 
-        img {
+        img
+        {
             width: 18px;
             margin-right: 20px;
         }
 
-        input {
+        input
+        {
             width: 100%;
             background: transparent;
             border: none;
@@ -62,46 +73,56 @@
             color: $bg-light;
         }
 
-        input::placeholder {
+        input::placeholder
+        {
             color: $bg-light;
         }
     }
 
-    &_table {
+    &_table
+    {
         background-color: $bg-dark;
         margin: 20px;
         padding: 15px 15px 30px;
         height: 550px;
         overflow: auto;
 
-        table {
+        table
+        {
             width: 100%;
         }
 
-        tr {
+        tr
+        {
             display: flex;
 
-            td:first-child {
+            td:first-child
+            {
                 min-width: 100px;
             }
 
-            td:nth-child(2) {
+            td:nth-child(2)
+            {
                 min-width: 150px;
             }
 
-            td:nth-child(3) {
+            td:nth-child(3)
+            {
                 min-width: 150px;
             }
 
-            td:nth-child(4) {
+            td:nth-child(4)
+            {
                 min-width: 150px;
             }
         }
 
-        thead {
+        thead
+        {
             border-bottom: 1px solid $bg-medium;
 
-            td {
+            td
+            {
                 padding-bottom: 8px;
                 font-size: 14px;
                 color: $bg-light;
@@ -109,22 +130,21 @@
             }
         }
 
-        tbody {
-            tr {
+        tbody
+        {
+            tr
+            {
                 border-bottom: 1px solid $bg-medium;
             }
 
-            td {
+            td
+            {
                 padding: 5px 0;
-            }
-
-            img {
-                width: 30px;
-                cursor: pointer;
             }
         }
 
-        button {
+        button
+        {
             background-color: $bg-light;
             border: none;
             font-size: 10px;
@@ -133,55 +153,83 @@
             margin: 0 5px;
         }
 
-        button:hover {
+        button:hover
+        {
             background-color: $yellow;
             color: $bg-dark;
         }
     }
 
-    &_tableText1 {
+    &_img
+    {
+        width: 30px;
+        height: 30px;
+        border-radius: 100%;
+        overflow: hidden;
+
+        img
+        {
+            width: 100%;
+            height: 100%;
+            cursor: pointer;
+        }
+    }
+
+    &_tableText1
+    {
         font-size: 12px;
         font-weight: 500;
     }
 
-    &_tableText2 {
+    &_tableText2
+    {
         color: $bg-light;
         font-size: 10px;
     }
 }
 
-@media (max-width: 991px) {
-    .org {
+@media (max-width: 991px)
+{
+    .org
+    {
 
-        &_head {
+        &_head
+        {
             width: 520px;
         }
 
-        &_search {
+        &_search
+        {
             width: 520px;
         }
 
-        &_table {
+        &_table
+        {
             margin: 5px;
 
-            table {
+            table
+            {
                 width: 520px;
             }
 
-            tr {
+            tr
+            {
                 display: table-row;
 
-                td {
+                td
+                {
                     min-width: auto !important;
                 }
             }
         }
 
-        &_tabs {
+        &_tabs
+        {
             margin: 15px 5px 5px;
         }
 
-        &_tabs {
+        &_tabs
+        {
             padding: 15px;
             width: auto;
             font-size: 14px;
