--- a/src/assets/styles/partials/pages/_project.scss
+++ b/src/assets/styles/partials/pages/_project.scss
@@ -76,7 +76,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-    
+
 
         img
         {
@@ -149,13 +149,20 @@
                 padding: 5px 0;
             }
         }
+    }
+
+    &_img
+    {
+        width: 30px;
+        height: 30px;
+        border-radius: 100%;
+        overflow: hidden;
 
         img
         {
-            width: 30px;
+            width: 100%;
+            height: 100%;
             cursor: pointer;
-            // position: relative;
-            // z-index: 2;
         }
     }
 
