--- a/src/assets/styles/partials/pages/_organizer.scss
+++ b/src/assets/styles/partials/pages/_organizer.scss
@@ -110,10 +110,13 @@
             {
                 min-width: 150px;
             }
-
             td:nth-child(4)
             {
                 min-width: 150px;
+            }
+            td:nth-child(5)
+            {
+                min-width: 180px;
             }
         }
 
