--- a/src/assets/styles/partials/components/_addOrganizer.scss
+++ b/src/assets/styles/partials/components/_addOrganizer.scss
@@ -59,8 +59,15 @@
         margin: 0 25px;
         border: 1px solid $bg-light;
         padding: 15px 10px;
-        font-size: 12px;
-        color: gray;
+
+        textarea
+        {
+            width: 100%;
+            background-color: transparent;
+            border: none;
+            outline: none;
+            color: gray;
+        }
 
         p
         {
