--- a/src/assets/styles/partials/components/_projectDetail.scss
+++ b/src/assets/styles/partials/components/_projectDetail.scss
@@ -3,7 +3,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    background: rgba(0,0,0,0.5);
+    background: rgba(0, 0, 0, 0.5);
     width: 100%;
     height: 100vh;
     display: flex;
@@ -42,9 +42,9 @@
             justify-content: space-between;
             display: flex;
         }
-        
+
         font-size: 14px;
-        
+
         p
         {
             margin-bottom: 2px;
@@ -124,14 +124,16 @@
     {
         display: flex;
 
-        div:first-child
+        >div:first-child
         {
+            padding-right: 20px;
+            margin-right: 20px;
+            border-right: 1px solid #545454;
+
             div
             {
-                width: 60px;
-                padding-right: 20px;
-                margin-right: 20px;
-                border-right: 1px solid #545454;
+                // width: 60px;
+                // margin-right: 20px;
             }
         }
 
@@ -153,11 +155,14 @@
         width: 40px;
         height: 40px;
         margin: 6px;
+        border-radius: 100%;
+        overflow: hidden;
 
         img
         {
             width: 100%;
             height: 100%;
+            object-fit: cover;
         }
     }
 
