--- a/src/assets/styles/partials/pages/_addProject.scss
+++ b/src/assets/styles/partials/pages/_addProject.scss
@@ -1,7 +1,9 @@
-.add {
+.add
+{
     padding: 20px;
 
-    &_top {
+    &_top
+    {
         background-color: $bg-dark;
         padding: 20px;
         display: flex;
@@ -9,21 +11,25 @@
         align-items: center;
     }
 
-    &_topLeft {
+    &_topLeft
+    {
         display: flex;
         align-items: center;
 
-        img {
+        img
+        {
             width: 50px;
         }
 
-        p {
+        p
+        {
             color: white;
             margin-left: 25px;
         }
     }
 
-    &_btn {
+    &_btn
+    {
         background-color: $bg-light;
         border: none;
         font-size: 10px;
@@ -31,20 +37,24 @@
         color: $primary;
     }
 
-    &_form {
+    &_form
+    {
         display: flex;
         justify-content: space-between;
         margin-top: 40px;
     }
 
-    &_formLeft {
+    &_formLeft
+    {
         width: 49%;
 
-        label {
+        label
+        {
             font-size: 14px;
         }
 
-        input {
+        input
+        {
             width: 100%;
             background: $bg-dark;
             border: none;
@@ -54,7 +64,8 @@
             color: $primary;
         }
 
-        textarea {
+        textarea
+        {
             width: 100%;
             background: $bg-dark;
             border: none;
@@ -65,19 +76,23 @@
         }
     }
 
-    &_formRight {
+    &_formRight
+    {
         width: 49%;
 
-        >div {
+        >div
+        {
             margin-bottom: 40px;
         }
     }
 
-    &_inputMain {
+    &_inputMain
+    {
         display: flex;
         justify-content: space-between;
 
-        input {
+        input
+        {
             width: 100%;
             background: #272C33;
             border: none;
@@ -88,7 +103,8 @@
             color: $primary;
         }
 
-        textarea {
+        textarea
+        {
             width: 100%;
             background: #272C33;
             border: none;
@@ -99,7 +115,8 @@
         }
 
         button,
-        label {
+        label
+        {
             cursor: pointer;
             background: $bg-dark;
             border: none;
@@ -110,42 +127,56 @@
             justify-content: center;
             margin-bottom: 2px;
 
-            img {
+            img
+            {
                 width: 15px;
             }
         }
 
-        input[type="file"] {
+        input[type="file"]
+        {
             display: none;
         }
     }
 
-    &_btnHidden {
+    &_btnHidden
+    {
         background: transparent !important;
         pointer-events: none;
     }
 
-    &_btnImg {
+    &_btnImg
+    {
         text-align: center;
 
-        img {
+        img
+        {
             width: 20px;
             cursor: pointer;
         }
 
-        input {
+        input
+        {
             display: none;
         }
     }
 
-    &_images {
+    &_error
+    {
+        color: red;
+        margin-top: 10px;
+    }
+
+    &_images
+    {
         margin-top: 20px;
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
     }
 
-    &_image {
+    &_image
+    {
         background-color: black;
         width: 120px;
         height: 80px;
@@ -154,7 +185,8 @@
         border: 1px solid white;
         position: relative;
 
-        i {
+        i
+        {
             display: none;
             position: absolute;
             top: 50%;
@@ -163,29 +195,35 @@
             cursor: pointer;
         }
 
-        img {
+        img
+        {
             width: 100%;
             height: 100%;
             object-fit: cover;
         }
     }
 
-    &_image:hover {
-        img {
+    &_image:hover
+    {
+        img
+        {
             opacity: 0.5;
         }
 
-        i {
+        i
+        {
             display: block;
         }
     }
 
-    &_btns {
+    &_btns
+    {
         display: flex;
         justify-content: center;
         margin: 50px 0 10px;
 
-        button {
+        button
+        {
             background-color: $bg-dark;
             border: none;
             font-size: 10px;
@@ -194,20 +232,23 @@
             margin: 0 5px;
         }
 
-        button:hover {
+        button:hover
+        {
             background-color: $yellow;
             color: $bg-dark;
         }
     }
 
-    &_bot {
+    &_bot
+    {
         display: flex;
         background: $bg-light;
         margin: 0 -20px;
         padding: 50px;
     }
 
-    &_peopleTitle {
+    &_peopleTitle
+    {
         background-color: #272C33;
         border: none;
         font-size: 12px;
@@ -215,32 +256,48 @@
         color: #999999;
     }
 
-    &_peopleBody {
+    &_peopleBody
+    {
         background-color: $bg-dark;
         margin-top: 3px;
         padding: 15px;
         min-height: 100px;
+        display: flex;
 
-        img {
+        div
+        {
             width: 40px;
+            height: 40px;
+            overflow: hidden;
+            border-radius: 100%;
             margin: 5px;
+        }
+
+        img
+        {
+            width: 100%;
+            height: 100%;
         }
     }
 
-    &_people {
+    &_people
+    {
         width: 40%;
         margin-right: 60px;
     }
 
-    &_convo {
+    &_convo
+    {
         width: 400px;
 
-        img {
+        img
+        {
             width: 30px;
         }
     }
 
-    &_convoTitle {
+    &_convoTitle
+    {
         background-color: #272C33;
         border: none;
         font-size: 12px;
@@ -248,43 +305,51 @@
         color: #999999;
     }
 
-    &_convoBody {
+    &_convoBody
+    {
         background-color: $bg-dark;
         margin-top: 3px;
         padding: 20px;
         display: flex;
     }
 
-    &_convoLeft {
+    &_convoLeft
+    {
         margin-right: 20px;
 
-        img {
+        img
+        {
             width: 45px;
         }
     }
 
-    &_convoname {
+    &_convoname
+    {
         color: white;
         font-size: 14px;
     }
 
-    &_convodesc {
+    &_convodesc
+    {
         font-size: 12px;
         line-height: 16px;
         margin-top: 10px;
     }
 
-    &_convoreplies {
+    &_convoreplies
+    {
         font-size: 12px;
         margin-top: 10px;
         color: white;
     }
 
-    &_convoReply {
+    &_convoReply
+    {
         position: relative;
         margin-top: 10px;
 
-        input {
+        input
+        {
             width: 100%;
             background-color: #272C33;
             border: none;
@@ -295,7 +360,8 @@
             color: $bg-light;
         }
 
-        img {
+        img
+        {
             position: absolute;
             right: 10px;
             top: 6px;
@@ -303,32 +369,39 @@
         }
     }
 
-    &_authorities {
+    &_authorities
+    {
         margin-top: 10px;
 
-        >div {
+        >div
+        {
             position: relative;
             padding: 5px 20px;
         }
 
-        >div:hover {
+        >div:hover
+        {
             background-color: #3f4954;
 
-            span {
+            span
+            {
                 display: block;
             }
         }
 
-        >div p:first-child {
+        >div p:first-child
+        {
             font-size: 16px;
             font-weight: 500;
         }
 
-        >div p:nth-child(2) {
+        >div p:nth-child(2)
+        {
             font-size: 12px;
         }
 
-        span {
+        span
+        {
             position: absolute;
             right: 20px;
             top: 13px;
@@ -340,79 +413,97 @@
             display: none;
         }
 
-        i {
+        i
+        {
             font-size: 24px;
         }
 
-        a {
+        a
+        {
             color: white;
         }
     }
 }
 
-@media (max-width: 991px) {
-    .add {
+@media (max-width: 991px)
+{
+    .add
+    {
         padding: 0px;
 
-        &_top {
+        &_top
+        {
             padding: 10px;
         }
 
-        &_topLeft {
-            img {
+        &_topLeft
+        {
+            img
+            {
                 width: 30px;
             }
 
-            p {
+            p
+            {
                 margin-left: 15px;
                 font-size: 12px;
                 margin-right: 15px;
             }
         }
 
-        &_btn {
+        &_btn
+        {
             width: 125px;
         }
 
-        &_form {
+        &_form
+        {
             padding: 15px;
             flex-wrap: wrap;
         }
 
         &_formLeft,
-        &_formRight {
+        &_formRight
+        {
             width: 100%;
         }
 
-        &_images {
+        &_images
+        {
             padding: 15px;
         }
 
-        &_imagesBody {
+        &_imagesBody
+        {
             margin-top: -20px;
         }
 
-        &_image {
+        &_image
+        {
             width: 85px;
             height: 60px;
         }
 
-        &_btns {
+        &_btns
+        {
             flex-wrap: wrap;
             margin: 20px 0 10px;
 
-            button {
+            button
+            {
                 margin: 5px;
             }
         }
 
-        &_bot {
+        &_bot
+        {
             flex-wrap: wrap;
             margin: 0;
             padding: 50px 10px;
         }
 
-        &_people {
+        &_people
+        {
             width: 100%;
             margin: 0;
             margin-bottom: 30px;
