--- a/src/assets/styles/partials/pages/_addProject.scss
+++ b/src/assets/styles/partials/pages/_addProject.scss
@@ -305,10 +305,17 @@
         color: #999999;
     }
 
+    &_convoBox
+    {
+        max-height: 200px;
+        overflow: auto;
+        margin-top: 3px;
+    }
+
     &_convoBody
     {
         background-color: $bg-dark;
-        margin-top: 3px;
+        margin-bottom: 3px;
         padding: 20px;
         display: flex;
     }
@@ -316,11 +323,23 @@
     &_convoLeft
     {
         margin-right: 20px;
+        width: 45px;
+        height: 45px;
+        overflow: hidden;
+        border-radius: 100%;
+        flex-shrink: 0;
 
         img
         {
-            width: 45px;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
+    }
+
+    &_convoRight
+    {
+        width: 100%;
     }
 
     &_convoname
@@ -341,9 +360,10 @@
         font-size: 12px;
         margin-top: 10px;
         color: white;
+        cursor: pointer;
     }
 
-    &_convoReply
+    &_convoMsg
     {
         position: relative;
         margin-top: 10px;
@@ -367,6 +387,44 @@
             top: 6px;
             width: 25px;
         }
+    }
+
+    &_convoReply
+    {
+        position: relative;
+        margin-top: 10px;
+
+        input
+        {
+            width: 100%;
+            background-color: #2f353e;
+            border: none;
+            height: 30px;
+            font-size: 14px;
+            padding-left: 15px;
+            outline: none;
+            color: $bg-light;
+        }
+
+        img
+        {
+            position: absolute;
+            right: 10px;
+            top: 6px;
+            width: 25px;
+        }
+    }
+
+    &_reply
+    {
+        font-size: 12px;
+        margin: 3px 0;
+        display: none;
+    }
+
+    &_reply.show
+    {
+        display: block;
     }
 
     &_authorities
