--- a/src/assets/styles/partials/pages/_project.scss
+++ b/src/assets/styles/partials/pages/_project.scss
@@ -163,6 +163,7 @@
             width: 100%;
             height: 100%;
             cursor: pointer;
+            object-fit: cover;
         }
     }
 
