--- a/src/assets/styles/partials/components/_addOrganizer.scss
+++ b/src/assets/styles/partials/components/_addOrganizer.scss
@@ -54,6 +54,14 @@
         padding: 0 60px;
     }
 
+    &_success
+    {
+        margin-top: 20px;
+        text-align: center;
+        color: green;
+        margin-bottom: -10px;
+    }
+
     &_desc
     {
         margin: 0 25px;
@@ -115,15 +123,15 @@
 
     &_labelImg
     {
-    width: 120px;
-    height: 120px;
-    overflow: hidden;
-    cursor: pointer;
-    margin-top: 30px;
-    margin-left: 100px;
-    border-radius: 50%;
-    border: 3px solid #cbcbcb;
-    margin-bottom: 16px;
+        width: 120px;
+        height: 120px;
+        overflow: hidden;
+        cursor: pointer;
+        margin-top: 30px;
+        margin-left: 100px;
+        border-radius: 50%;
+        border: 3px solid #cbcbcb;
+        margin-bottom: 16px;
 
         img
         {
