--- a/src/assets/styles/partials/pages/_login.scss
+++ b/src/assets/styles/partials/pages/_login.scss
@@ -17,7 +17,8 @@
         color: $primary;
     }
 
-    &_email, &_pass
+    &_email,
+    &_pass
     {
         position: relative;
         width: 280px;
@@ -57,23 +58,6 @@
             color: $primary;
             text-decoration: none;
             font-size: 14px;
-        }
-    }
-
-    &_checkFields
-    {
-
-        div
-        {
-            margin: 0 10px;
-            display: flex;
-            align-items: center;
-        }
-
-        label
-        {
-            margin-left: 5px;
-            font-size: 12px;
         }
     }
 
