--- a/src/assets/styles/partials/pages/_reset.scss
+++ b/src/assets/styles/partials/pages/_reset.scss
@@ -17,7 +17,8 @@
         color: $primary;
     }
 
-    &_email, &_pass
+    &_email,
+    &_pass
     {
         position: relative;
         width: 250px;
@@ -41,6 +42,12 @@
             width: 37px;
             height: 37px;
         }
+    }
+
+    &_err
+    {
+        color: red;
+        margin-top: 10px;
     }
 
     &_logo
