--- a/src/assets/styles/partials/pages/_addProject.scss
+++ b/src/assets/styles/partials/pages/_addProject.scss
@@ -261,6 +261,7 @@
         font-size: 12px;
         padding: 5px 15px;
         color: #999999;
+        cursor: pointer;
     }
 
     &_peopleBody
@@ -270,15 +271,27 @@
         padding: 15px;
         min-height: 100px;
         display: flex;
+        flex-wrap: wrap;
 
-        div
+        >div
         {
-            width: 40px;
-            height: 40px;
-            overflow: hidden;
-            border-radius: 100%;
             margin: 5px;
+            text-align: center;
         }
+
+        p
+        {
+            font-size: 12px;
+        }
+    }
+
+    &_peopleBodyImg
+    {
+        width: 40px;
+        height: 40px;
+        overflow: hidden;
+        border-radius: 100%;
+        margin: auto;
 
         img
         {
@@ -286,6 +299,7 @@
             height: 100%;
         }
     }
+
 
     &_people
     {
@@ -393,6 +407,7 @@
             right: 10px;
             top: 6px;
             width: 25px;
+            cursor: pointer;
         }
     }
 
@@ -419,6 +434,7 @@
             right: 10px;
             top: 6px;
             width: 25px;
+            cursor: pointer;
         }
     }
 
