--- a/src/assets/styles/partials/pages/_organizer.scss
+++ b/src/assets/styles/partials/pages/_organizer.scss
@@ -188,7 +188,8 @@
     &_tableText2
     {
         color: $bg-light;
-        font-size: 10px;
+        font-size: 12px;
+        max-width: 145px;
     }
 }
 
