--- a/src/assets/styles/partials/pages/_project.scss
+++ b/src/assets/styles/partials/pages/_project.scss
@@ -115,7 +115,7 @@
     {
         background-color: $bg-dark;
         margin-top: 10px;
-        padding: 15px 5px 30px;
+        padding: 15px 0px 30px;
         height: 400px;
         overflow: auto;
 
@@ -152,7 +152,7 @@
 
             td
             {
-                padding: 5px 0;
+                padding: 5px;
             }
         }
     }
